# bevy-jam-2

./: Cargo.toml  README.md  clippy.toml
.github/workflows/: ci.yaml  release.yaml
assets/: levels.level.json
assets/shaders/: blue_view.wgsl  green_view.wgsl  red_view.wgsl
levels/: bevy-jam-2-levels.ldtk  levels.level.json  process_levels.ipynb
levels/bevy-jam-2-levels/simplified/Level_0/: data.json
levels/bevy-jam-2-levels/simplified/Level_1/: data.json
levels/bevy-jam-2-levels/simplified/Level_2/: data.json
levels/bevy-jam-2-levels/simplified/Level_3/: data.json
levels/bevy-jam-2-levels/simplified/Level_4/: data.json
levels/bevy-jam-2-levels/simplified/Level_5/: data.json
levels/bevy-jam-2-levels/simplified/Level_6/: data.json
levels/bevy-jam-2-levels/simplified/Level_7/: data.json
levels/bevy-jam-2-levels/simplified/Level_8/: data.json
levels/bevy-jam-2-levels/simplified/Level_9/: data.json
src/: audio.rs  camera_rendering.rs  game_mechanics.rs  level.rs  main.rs  object_rendering.rs  text_display.rs
