[package]
authors = ["Gajo Petrovic <gajopetrovic@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "bevy-jam-2"
version = "0.1.0"

[dependencies]
anyhow = "1.0.51"
bevy = "0.8"
bevy-inspector-egui = "0.12"
bevy_common_assets = {version = "0.3", features = ["json"]}
ctrl_macros = "0.1.0"
itertools = "0.10.3"
rand = "0.8.3"
serde = "1.0"

# # Enable only a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

# # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3
