[package]
authors = ["Gajo Petrovic <gajopetrovic@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "rgb"
version = "1.1.0"

[dependencies]
anyhow = "1.0.51"
bevy = "0.11"
# bevy-inspector-egui = "0.18"
bevy_common_assets = {version = "0.7", features = ["json"]}
ctrl_macros = "0.1"
itertools = "0.10"
rand = "0.8"
serde = "1.0"

# # Enable only a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

# # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3
